# renotize

./: .gitignore  README.md  config.empty.yml  pyproject.toml
.circleci/: config.yml
renotize/: __init__.py  renotize.py
