[tool.poetry]
name = "renotize"
version = "1.2.0"
description = "A utility script for quickly and automatically notarizing Ren'Py applications for macOS."
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/renotize"
homepage = "https://github.com/kobaltcore/renotize"

[tool.poetry.scripts]
renotize = "renotize.renotize:cli"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
pyyaml = "^5.3.1"
logzero = "^1.5.0"
tqdm = "^4.48.2"
arrow = "^0.16.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
