[tool.poetry]
name = "renotize"
version = "1.5.2"
description = "A utility script for quickly and automatically notarizing Ren'Py applications for macOS."
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/renotize"
homepage = "https://github.com/kobaltcore/renotize"

[tool.poetry.scripts]
renotize = "renotize.renotize:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.1"
pyyaml = "^5.3.1"
tqdm = "^4.61.0"
arrow = "^1.1.0"
PyYAML = "^5.4.1"
rich = "^10.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
black = "^20.8b1"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
