[tool.poetry]
name = "renotize"
version = "1.6.0"
description = "A utility script for quickly and automatically notarizing Ren'Py applications for macOS."
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/renotize"
homepage = "https://github.com/kobaltcore/renotize"

[tool.poetry.scripts]
renotize = "renotize.renotize:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
tqdm = "^4.64.0"
arrow = "^1.2.2"
PyYAML = "^6.0"
rich = "^12.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
